# AuraBI

./: .gitignore  LICENSE  README.md  SKILL.md  agents-cli-manifest.yaml  pyproject.toml  sample_crm_deals.csv  sample_erp_ledger.csv
app/: agent.py  agent_utils.py  data_sources.py  main.py  mcp_server.py  reports.py
app/static/: index.html  script.js  style.css
tests/: test_app.py
