[project]
name = "aurabi"
version = "0.1.0"
description = "AuraBI: AI-Powered next-generation Business Intelligence tool"
authors = [
    {name = "Chintan Gohil", email = "chintan@example.com"},
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "google-genai>=0.1.1",
    "pydantic>=2.0.0",
    "google-adk[gcp]>=2.0.0,<3.0.0",
    "mcp>=0.1.0",
]
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
